# binance-bot

./: .env.example  .env.vault  .gitignore  README.md  backtest_runner.py  config.py  install_with_uv.bat  main.py  pyproject.toml  setup.py
.githooks/: post-merge
bot/: __init__.py  bot.py  indicators.py  logger.py  utils.py
src/: __init__.py  app.py  backtest.py  backtest_runner.py  bot.py  config.py  indicators.py  logger.py  main.py  utils.py
src/app/: app.py
src/backtest/: backtest.py
src/bot/: __init__.py  backtest.py  backtest_runner.py  bot.py  config.py  futures.py  futures_runner.py  indicators.py  logger.py  utils.py
