[project]
name = "binance-qqe-bot"
version = "0.1.0"
description = "Trading bot for Binance using QQE indicator"
requires-python = ">=3.11"
dependencies = [
    "binance-connector",
    "numpy",
    "pandas",
    "ta-lib",
]

[dependency-groups]
dev = [
    "mypy",
    "python-dotenv-vault",
]
lint = [
  "ruff"
]
test = [
]
docs = [
]

[tool.uv]
#package = true
link-mode = "copy"
default-groups = [
	"lint",
    "test",
    "docs",
]

[tool.uv.sources]
ta-lib = { url = "https://github.com/cgohlke/talib-build/releases/download/v0.6.3/ta_lib-0.6.3-cp311-cp311-win_amd64.whl" }

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I"]
ignore = [
    "E501",
    "E731",
]
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []
exclude = [
    ".git",
    ".ruff_cache",
    "__pycache__",
    "venv",
    ".env",
]

[tool.ruff.isort]
known-first-party = ["bot"]

#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"
