[project]
name = "binance-bot"
version = "0.1.0"
description = "Trading bot for Binance"
requires-python = ">=3.11"
dependencies = [
    "binance-connector>=3.12.0",
    "lightweight-charts>=2.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "ta-lib==0.6.3",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pandas-stubs>=2.2.3.250308",
    "python-dotenv-vault>=0.6.4",
]
lint = [
    "ruff>=0.11.4",
]
test = []
docs = []

[project.scripts]
bot = "src/main:main"
#app = "src/app/app:main"

[tool.uv]
package = false
link-mode = "copy"
default-groups = [
    "lint",
    "test",
    "docs",
]

[tool.uv.sources]
ta-lib = { url = "https://github.com/cgohlke/talib-build/releases/download/v0.6.3/ta_lib-0.6.3-cp311-cp311-win_amd64.whl" }

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I"]
ignore = ["E501", "E731"]
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []
src = [
    "src",
    "examples",
    "tests",
]
exclude = [
    ".git",
    ".ruff_cache",
    "__pycache__",
    "venv",
    ".env",
]

[tool.ruff.isort]
known-first-party = [
    "src",
]

[tool.mypy]
disable_error_code = ["import-untyped"]

#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"
